# carrismetropolitana-ui

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: build-nix.yml  build-nix.yml.bak  ci.yml  rust_embedded_ci.yml
api-client/: Cargo.toml
api-client/src/: lib.rs  types.rs
api-client/src/api/: client_embedded.rs  client_std.rs  mod.rs
desktop/: Cargo.toml
desktop/src/: config.rs  lib.rs  main.rs
desktop/ui/: main.slint
embedded/: Cargo.toml  wokwi.toml
