[package]
name = "carris-api"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["dep:reqwest"]
embedded = ["dep:reqwless", "dep:embedded-nal-async", "dep:embedded-io-async", "dep:heapless", "dep:der"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwless = { version = "0.14", features = ["alloc", "defmt", "default", "embedded-tls"], optional = true }
embedded-nal-async = { version = "0.9", optional = true }
embedded-io-async = { version = "0.7", optional = true }
rand = "0.10.0"
heapless = { version = "0.9.2", features = ["alloc", "defmt", "serde", "embedded-io-v0.7"] , optional = true}
der = { version = "0.8.0", features = ["alloc", "heapless",], optional = true }
reqwest = { version = "0.13.2", features = ["json", "rustls"], optional = true }
