[package]
name = "CarrisMetropolianaDesktopUI"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "carrismetropoliana_lib"

[[bin]]
path = "src/main.rs"
name = "CarrisMetropolianaDesktopUI"

[dependencies]
carris-api = { path = "../api-client", features = ["std"], default-features = false}
async-compat = "0.2.5"
slint = { version = "1.15", features = [
    "backend-android-activity-06", # A necessary feature for Android support.
    "backend-winit-wayland", # It ensures Wayland support on GNU/Linux.
    "live-preview", # It enables hot reloading.
    "renderer-femtovg", # It is the only renderer that simply works out of the box on desktop. It has impact only on desktop.
] }
defmt = { version = "1.0.1", features = ["alloc"] }
xdg = { version = "3.0.0", features = ["serde"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.15"  }

[package.metadata.android]
package = "dev.slint.material_template"
apk_name = "CarrisMetropolianaDesktopUI"

[package.metadata.android.application]
label = "CarrisMetropolianaDesktopUI"
