[package]
name = "carris-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "carris_ui_lib"

[[bin]]
path = "src/main.rs"
name = "carris-ui"

[dependencies]
carris-api = { path = "../api-client", features = ["std"], default-features = false}
async-compat = "0.2.5"
slint = { version = "1.15", features = [
    "backend-android-activity-06", # A necessary feature for Android support.
    "backend-winit-wayland", # It ensures Wayland support on GNU/Linux.
    "live-preview", # It enables hot reloading.
    "renderer-femtovg", # It is the only renderer that simply works out of the box on desktop. It has impact only on desktop.
] }
xdg = { version = "3.0.0", features = ["serde"] }
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
log = { version = "0.4.29", features = ["serde", "std", "kv", "kv_std", "kv_serde"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.15"  }

[package.metadata.android]
package = "dev.slint.material_template"
apk_name = "CarrisMetropolianaDesktopUI"

[package.metadata.android.application]
label = "CarrisMetropolianaDesktopUI"
